<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WorkoutDetailActivity"
    >
    <item
        android:id="@+id/item_list"
        android:title="@string/my_workouts"
        android:icon="@drawable/ic_list"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_user"
        android:title="@string/user_profile"
        android:icon="@drawable/ic_user"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_log_out"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_log_in"
        android:icon="@drawable/ic_log_in"
        android:title="@string/log_in"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />


</menu>
