<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/register" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_text"
                android:inputType="text"
                android:textColorHint="@android:color/holo_orange_dark" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textColorHint="@android:color/holo_orange_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_the_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/holo_orange_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_text"
                android:inputType="numberDecimal"
                android:textColorHint="@android:color/holo_orange_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_age_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_text"
                android:inputType="number"
                android:textColorHint="@android:color/holo_orange_dark" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/register_activity_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@android:color/holo_orange_dark"
                    android:theme="@style/MyRadioButton" />

                <RadioButton
                    android:id="@+id/register_activity_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="@android:color/holo_orange_dark"
                    android:theme="@style/MyRadioButton" />
            </RadioGroup>
        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_activity_register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_style"
            android:padding="12dp"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/register_activity_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:text="@string/already_member"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>