<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_dark"
    tools:context="sk.tuke.smart.makac.WorkoutDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_workoutdetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_orange_dark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/linear_layout_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_style"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_workoutdetail_labelsport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_workoutdetail_sportactivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="0dp"
                    android:paddingStart="15dp"
                    android:text="@string/running"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_activitydate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/activity_date"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_layout_sport"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_style">

                <TextView
                    android:id="@+id/textview_workoutdetail_labelsummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/summary"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_workoutdetail_labelduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_labelsummary"
                    android:text="@string/duration"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_workoutdetail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_labelduration"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/zero_time"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_labeldistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textview_workoutdetail_labelsummary"
                    android:text="@string/distance"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_workoutdetail_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_labeldistance"
                    android:layout_toStartOf="@+id/textview_workoutdetail_distanceunit"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/zero"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_distanceunit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textview_workoutdetail_labeldistance"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/kilometres"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_labelpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_distance"
                    android:layout_marginTop="10dp"
                    android:text="@string/avg_pace"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_workoutdetail_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textview_workoutdetail_unitpace"
                    android:layout_alignBottom="@+id/textview_workoutdetail_unitpace"
                    android:layout_alignParentStart="true"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/zero"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_unitpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_labelpace"
                    android:layout_toEndOf="@+id/textview_workoutdetail_pace"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/kiloperhour"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_labelcalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textview_workoutdetail_distanceunit"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/calories"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_workoutdetail_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_workoutdetail_labelcalories"
                    android:layout_toStartOf="@+id/textview_workoutdetail_unitcalories"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:text="@string/start_calories"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_workoutdetail_unitcalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textview_workoutdetail_labelcalories"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/calories_unit"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_social_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/relative_layout"
                android:background="@drawable/border_style"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_workoutdetail_labelsocialshare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social_share"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />


                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <Button
                        android:id="@+id/button_workoutdetail_gplusshare"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/google_plus_button"
                        android:onClick="onClick" />

                    <Button
                        android:id="@+id/button_workoutdetail_twittershare"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/twitter_button"
                        android:onClick="onClick" />

                    <Button
                        android:id="@+id/button_workoutdetail_emailshare"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/gmail_button"
                        android:onClick="onClick" />

                    <Button
                        android:id="@+id/button_workoutdetail_fbsharebtn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/facebook_button"
                        android:onClick="onClick" />

                </GridLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_workoutdetail_share_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_social_share"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/write"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_workoutdetail_showmap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_workoutdetail_share_message"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_style"
                android:text="@string/show_map" />

            <Button
                android:id="@+id/btGetPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_workoutdetail_showmap"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style"
                android:text="@string/show_places" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

